language/move-lang/tests/move_check/expansion/standalone_fields.exp
error: 

   ┌── tests/move_check/expansion/standalone_fields.move:3:11 ───
   │
 3 │         {f: 1, g: 0};
   │           ^ Unrecognized Token: :
   ·
 3 │         {f: 1, g: 0};
   │           - Expected:  ";"
   │

